--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,6 +28,8 @@
         android:layout_margin="5dp"
         android:background="#fff"
         android:hint="Nama User"
+        android:textColorHint="@color/colorPrimary"
+        android:textColor="@color/colorPrimary"
         android:inputType="textPersonName"
         android:padding="5dp"
         />
@@ -38,6 +40,8 @@
         android:layout_margin="5dp"
         android:background="#fff"
         android:hint="Telp"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:inputType="number"
         android:padding="5dp"
         />
@@ -48,6 +52,8 @@
         android:layout_margin="5dp"
         android:background="#fff"
         android:hint="Email"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:inputType="textEmailAddress"
         android:padding="5dp"
         />
@@ -59,6 +65,8 @@
         android:layout_margin="5dp"
         android:background="#fff"
         android:hint="password"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:inputType="textPassword"
         android:padding="5dp"
         />
@@ -70,6 +78,8 @@
         android:background="#fff"
         android:hint="Konfirmasi Password"
         android:inputType="textPassword"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:padding="5dp"
         />
     <EditText
@@ -80,6 +90,8 @@
         android:background="#fff"
         android:hint="Desa"
         android:inputType="textPersonName"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:padding="5dp"
         />
     <EditText
@@ -90,6 +102,8 @@
         android:background="#fff"
         android:hint="Kecamatan"
         android:inputType="textPersonName"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:padding="5dp"
         />
     <LinearLayout
@@ -100,10 +114,12 @@
             android:id="@+id/txtkelurahan"
             android:layout_width="430px"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/colorPrimary"
             android:layout_margin="5dp"
             android:background="#fff"
             android:hint="Kelurahan"
             android:inputType="textPersonName"
+            android:textColor="@color/colorPrimary"
             android:padding="5dp"
             />
         <EditText
@@ -111,8 +127,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:textColorHint="@color/colorPrimary"
             android:background="#fff"
             android:hint="Kode Pos"
+            android:textColor="@color/colorPrimary"
             android:inputType="number"
             android:padding="5dp"
             />
@@ -124,6 +142,8 @@
         android:layout_margin="5dp"
         android:background="#fff"
         android:hint="Detail Alamat"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
         android:inputType="textPersonName"
         android:padding="5dp"
         />
